; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/atm/extr_horizon.c_rd_framer.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/atm/extr_horizon.c_rd_framer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MEM_RD_ADDR_REG_OFF = common dso_local global i32 0, align 4
@MEMORY_PORT_OFF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @rd_framer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rd_framer(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32*, i32** %3, align 8
  %6 = load i32, i32* @MEM_RD_ADDR_REG_OFF, align 4
  %7 = load i32, i32* %4, align 4
  %8 = or i32 %7, -2147483648
  %9 = call i32 @wr_regl(i32* %5, i32 %6, i32 %8)
  %10 = load i32*, i32** %3, align 8
  %11 = load i32, i32* @MEMORY_PORT_OFF, align 4
  %12 = call i32 @rd_regl(i32* %10, i32 %11)
  ret i32 %12
}

declare dso_local i32 @wr_regl(i32*, i32, i32) #1

declare dso_local i32 @rd_regl(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
